--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
