--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/messenger": "4.3.*",
+        "symfony/monolog-bundle": "^3.4",
         "symfony/web-server-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
