--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -5,6 +5,12 @@ monolog:
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
             channels: ["!event"]
+        elk:
+            type: stream
+            path: "%kernel.logs_dir%/elk.log"
+            formatter: service.elkformater
+            level: info
+            channels: ["elk"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
