--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/messenger": "4.3.*",
         "symfony/monolog-bundle": "^3.4",
         "symfony/web-server-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "nmred/kafka-php": "0.2.*"
     },
     "config": {
         "preferred-install": {
